refactor: Prefer List.of() and Map.of()
Removing usages of Collections API.